Fix text shifting during animation by using transform scale

--- a/part-1/style.scss
+++ b/part-1/style.scss
@@ -203,19 +203,19 @@ h6 {
   align-items: center;
   gap: 24px;
   position: relative;
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
+  width: 100%;
+  height: 100%;
   padding: 5%;
+  transform: scale(0.9);
   text-align: center;
   color: $tertxt;
   background: $ter;
   box-shadow: 0 0 50px rgb(0 0 0 / 20%);
-  transition: width .6s ease, height .6s ease, color .6s ease, background .6s ease;
+  transition: transform .6s ease, color .6s ease, background .6s ease;
   z-index: 1;
 
   .swiper-slide-active & {
-    width: calc(100% - 12px);
-    height: calc(100% - 12px);
+    transform: scale(0.94);
     color: $sectxt;
     background: $sec;
 
